功能：完成文件直传与对象存储Provider
